# customer-support-open.env

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE_WHITEPAPER.md  DEVPOST_SUBMISSION.md  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  benchmark.py  benchmark.sh  benchmark_results.json  benchmark_results.txt  compliance_audit.md  debug_run.py  deploy.sh  environment.py  grader.py  imp2  improvements  inference.py  log_validator.py  metrics_tracker.py  openenv.yaml  patch.py  pyproject.toml  requirements.txt  server.py  tasks.py  validate-submission.sh
_ui_archive/: Dockerfile
_ui_archive/duplicates/: environment.py  fix.py  grader.py  models.py  test_basic.py
_ui_archive/frontend/: package-lock.json  package.json
_ui_archive/frontend/src/: App.jsx  index.css
_ui_archive/frontend/src/pages/: LiveFeed.jsx
env/: __init__.py  environment.py  grader.py  logger.py  models.py  reward.py  tasks.py
frontend/: index.html  package-lock.json
frontend/src/: api.js
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  History.jsx  Resources.jsx  Settings.jsx
server/: app.py
server/web/: app.js  index.html  style.css
tests/: test_environment.py  test_grader.py  test_nlp_grader.py  test_reward.py  test_session_isolation.py
